modifying the pom